configure Heat with new authtoken parameters
Configure Heat with new authtoken parameters provided by puppet-heat
module.
Also move the authtoken parameters in heat-base, required by both
heat-engine and heat-api.

Depends-On: I7a9d10b0a8092b3d0c70708b57637098cfe2b56d
Change-Id: Id5cd3e830f64263c8d39c7d2973c99d0380e772c

--- a/puppet/services/heat-base.yaml
+++ b/puppet/services/heat-base.yaml
@@ -32,6 +32,10 @@ parameters:
                  via parameter_defaults in the resource registry.  This
                  mapping overrides those in ServiceNetMapDefaults.
     type: json
+  HeatPassword:
+    description: The password for the Heat service and db account, used by the Heat services.
+    type: string
+    hidden: true
   DefaultPasswords:
     default: {}
     type: json
@@ -60,11 +64,13 @@ outputs:
             key: 'context_is_admin'
             value: 'role:admin'
         heat::rabbit_heartbeat_timeout_threshold: 60
-        heat::keystone_tenant: 'service'
+        heat::keystone::authtoken::project_name: 'service'
+        heat::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
+        heat::keystone::authtoken::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
+        heat::keystone::authtoken::password: {get_param: HeatPassword}
         heat::keystone::domain::domain_name: 'heat_stack'
         heat::keystone::domain::domain_admin: 'heat_stack_domain_admin'
         heat::keystone::domain::domain_admin_email: 'heat_stack_domain_admin@localhost'
-        heat::auth_plugin: 'password'
         heat::cron::purge_deleted::age: 30
         heat::cron::purge_deleted::age_type: 'days'
         heat::cron::purge_deleted::maxdelay: 3600
