Modify sriov_numvfs config from puppet-neutron to tripleo
Allow the operator to configure sriov_numvfs for each of the
required SR-IOV interfaces

Co-Authored-By: Vijay Chundury <vchundur@redhat.com>

Implements: blueprint tripleo-sriov
Depends-On:I7450b904475bdf46498d9af633416b3eba12f761
Change-Id: I07fd9fbb1268f3a189fcadee9f30f96ba476e533
Signed-off-by: karthik s <ksundara@redhat.com>

--- a/puppet/services/neutron-sriov-agent.yaml
+++ b/puppet/services/neutron-sriov-agent.yaml
@@ -53,6 +53,6 @@ outputs:
       config_settings:
         neutron::agents::ml2::sriov::physical_device_mappings: {get_param: NeutronPhysicalDevMappings}
         neutron::agents::ml2::sriov::exclude_devices: {get_param: NeutronExcludeDevices}
-        neutron::agents::ml2::sriov::number_of_vfs: {get_param: NeutronSriovNumVFs}
+        tripleo::host::sriov::number_of_vfs: {get_param: NeutronSriovNumVFs}
       step_config: |
         include ::tripleo::profile::base::neutron::sriov
