Fix debug parameter in gnocchi-base.yaml
This gnocchi-base service was using get_input to obtain
the debug setting which won't work here. This patch adds in
the standard Debug heat parameter to the service and sets
it via get_param.

Change-Id: Idfb772567d5711083b82ae8cb4bce2c4498b4d64

--- a/puppet/services/gnocchi-base.yaml
+++ b/puppet/services/gnocchi-base.yaml
@@ -40,6 +40,10 @@ parameters:
     description: The password for the redis service account.
     type: string
     hidden: true
+  Debug:
+    type: string
+    default: ''
+    description: Set to True to enable debugging on all services.
 
 outputs:
   aux_parameters:
@@ -52,7 +56,7 @@ outputs:
       service_name: gnocchi_base
       config_settings:
         #Gnocchi engine
-        gnocchi::debug: {get_input: debug}
+        gnocchi::debug: {get_param: Debug}
         gnocchi::db::database_connection:
           list_join:
             - ''
