Rename opendaylight service to opendaylight_api
For compatibility with the custom-roles patches which convert
hard-coded hiera mappings (such as opendaylight_api_node_ips) to
data generated based on the service_name, we need to either change
this name to match the hiera (node_ips and vip) keys, or change the
hiera keys to match the service.  I took the former approach because
it involves less juggling patch dependencies between t-h-t and p-t.

Change-Id: Ic179550027f37946097afe0e5b9f504ea19fa7bc
Partially-Implements: blueprint custom-roles

--- a/puppet/services/opendaylight-api.yaml
+++ b/puppet/services/opendaylight-api.yaml
@@ -63,7 +63,7 @@ outputs:
   role_data:
     description: Role data for the OpenDaylight service.
     value:
-      service_name: opendaylight
+      service_name: opendaylight_api
       config_settings:
         opendaylight::odl_rest_port: {get_param: OpenDaylightPort}
         odl_on_controller: {get_param: EnableOpenDaylightOnController}
