Create NetIpListMap for all roles
This allows us to create $service_node_ips and $service_node_names
hiera entries for services not deployed on the Controller role.

Co-Authored-By: Thomas Herve <therve@redhat.com>
Change-Id: I688618dda05ff908293c32b9d8518697d57e9eb0
Partially-Implements: blueprint custom-roles

--- a/network/ports/net_ip_list_map.yaml
+++ b/network/ports/net_ip_list_map.yaml
@@ -78,9 +78,15 @@ outputs:
     description: >
       Map of enabled services to a list of hostnames where they're running
     value:
-      map_merge:
-        repeat:
-          template:
-            SERVICE_node_names: {get_param: ServiceHostnameList}
-          for_each:
-              SERVICE: {get_param: EnabledServices}
+      yaql:
+        # If ServiceHostnameList is empty the role is deployed with zero nodes
+        # therefore we don't want to add any *_node_names to the map
+        expression: dict($.data.map.items().where(len($[1]) > 0))
+        data:
+          map:
+            map_merge:
+              repeat:
+                template:
+                  SERVICE_node_names: {get_param: ServiceHostnameList}
+                for_each:
+                    SERVICE: {get_param: EnabledServices}
