--- a/puppet/services/horizon.yaml
+++ b/puppet/services/horizon.yaml
@@ -20,7 +20,8 @@ parameters:
     type: json
   HorizonAllowedHosts:
     default: '*'
-    description: A list of IP/Hostname allowed to connect to horizon
+    description: A list of IP/Hostname for the server Horizonis running on.
+                 Used for header checks.
     type: comma_delimited_list
   NeutronMechanismDrivers:
     default: 'openvswitch'
