Change CloudName default value to include domain
The CloudName's default value only included the shortname which is
not a very good practice. This now sets localdomain as the default
domain there.

Change-Id: Ic46b34d94a602aa948b873062015286cf49f7c3c

--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -13,7 +13,7 @@ parameters:
 
   # Common parameters (not specific to a role)
   CloudName:
-    default: overcloud
+    default: overcloud.localdomain
     description: The DNS name of this cloud. E.g. ci-overcloud.tripleo.org
     type: string
   CloudNameInternal:
