Add trunking plugin to list of default ML2 service plugins
This patch adds the 'trunk' service plugin to the list of plugins
enabled by default when using the ML2 plugin. This service plugin
enables the VLAN-aware-VM feature in Neutron.

Closes-Bug: 1618570
Change-Id: Ic55706d05adc9fa8baa2828ae4c939c11deb2083

--- a/puppet/services/neutron-plugin-ml2.yaml
+++ b/puppet/services/neutron-plugin-ml2.yaml
@@ -33,7 +33,7 @@ parameters:
     default: 'datacentre'
     description: If set, flat networks to configure in neutron plugins.
   NeutronPluginExtensions:
-    default: "qos,port_security"
+    default: "qos,port_security,trunk"
     description: |
         Comma-separated list of extensions enabled for the Neutron plugin.
     type: comma_delimited_list
