apache: Remove product informations
By default, the httpd version and the OS type is described in the
HTTP header 'Server'.

Server: Apache/2.4.6 (Red Hat Enterprise Linux)

This patch allows to remove the specific informations related to the
httpd server and the OS.

Change-Id: Ib608919102bc6b2c7619a522ae1262729dc7a91e

--- a/puppet/services/apache.yaml
+++ b/puppet/services/apache.yaml
@@ -31,6 +31,8 @@ outputs:
         # internal_api_uri -> [IP]
         # internal_api_subnet - > IP/CIDR
         apache::ip: {get_param: [ServiceNetMap, ApacheNetwork]}
+        apache::server_signature: 'Off'
+        apache::server_tokens: 'Prod'
         apache_remote_proxy_ips_network:
           str_replace:
             template: "NETWORK_subnet"
