Last round of modern authtoken update
It updates Glance, Neutron and Swift to deploy authtoken with modern
pattern.

Change-Id: Icfaf011ea4a23bc47d2fb45e8768f8238532dab3

--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -90,14 +90,14 @@ outputs:
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/glance'
         glance::api::bind_port: {get_param: [EndpointMap, GlanceInternal, port]}
-        glance::api::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
-        glance::api::identity_uri: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
+        glance::api::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
+        glance::api::authtoken::auth_url: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
         glance::api::registry_host:
           str_replace:
             template: "'REGISTRY_HOST'"
             params:
               REGISTRY_HOST: {get_param: [EndpointMap, GlanceRegistryInternal, host]}
-        glance::api::keystone_password: {get_param: GlancePassword}
+        glance::api::authtoken::password: {get_param: GlancePassword}
         glance::api::enable_proxy_headers_parsing: true
         glance::api::debug: {get_param: Debug}
         glance::api::workers: {get_param: GlanceWorkers}
@@ -128,7 +128,7 @@ outputs:
               - 9292
               - 13292
         glance::keystone::auth::tenant: 'service'
-        glance::api::keystone_tenant: 'service'
+        glance::api::authtoken::project_name: 'service'
         glance::api::pipeline: 'keystone'
         glance::api::show_image_direct_url: true
         # NOTE: bind IP is found in Heat replacing the network name with the
