Add missing reference to ExternalPort for DVR
Neutron DVR requires the OS::TripleO::Compute::Ports::ExternalPort to be
set to a valid port on the external network.

Change-Id: I46b96dba3e264e0e79f7f0cea83b0f66775d6d2a
Closes-Bug: 1618611

--- a/environments/neutron-ovs-dvr.yaml
+++ b/environments/neutron-ovs-dvr.yaml
@@ -9,6 +9,13 @@ resource_registry:
   # connected to a physical network.
   OS::TripleO::Compute::Net::SoftwareConfig: ../net-config-bridge.yaml
 
+  # DVR requires a port on the external network for each compute node.
+  # This will usually match the one currently in use for
+  # OS::TripleO::Controller::Ports::ExternalPort.
+  # Please review your network configuration before deploying to ensure that
+  # this is appropriate.
+  OS::TripleO::Compute::Ports::ExternalPort: ../network/ports/noop.yaml
+
 parameter_defaults:
 
   # DVR requires that the L2 population feature is enabled
