--- a/puppet/services/nova-vnc-proxy.yaml
+++ b/puppet/services/nova-vnc-proxy.yaml
@@ -41,14 +41,7 @@ outputs:
           - get_attr: [NovaBase, role_data, config_settings]
           - nova::vncproxy::enabled: true
             nova::vncproxy::common::vncproxy_protocol: {get_param: [EndpointMap, NovaVNCProxyPublic, protocol]}
-            # Remove brackets that may come if the IP address is IPv6.
-            # For DNS names and IPv4, this will just get NovaVNCProxyPublic
-            nova::vncproxy::common::vncproxy_host:
-              str_replace:
-                template: {get_param: [EndpointMap, NovaVNCProxyPublic, host]}
-                params:
-                  '[': ''
-                  ']': ''
+            nova::vncproxy::common::vncproxy_host: {get_param: [EndpointMap, NovaVNCProxyPublic, host_nobrackets]}
             nova::vncproxy::common::vncproxy_port: {get_param: [EndpointMap, NovaVNCProxyPublic, port]}
             # NOTE: bind IP is found in Heat replacing the network name with the local node IP
             # for the given network; replacement examples (eg. for internal_api):
