--- a/puppet/services/ironic-conductor.yaml
+++ b/puppet/services/ironic-conductor.yaml
@@ -46,8 +46,8 @@ outputs:
           # FIXME: I have no idea why neutron_url is in "api" manifest
           - ironic::api::neutron_url: {get_param: [EndpointMap, NeutronInternal, uri]}
             ironic::conductor::api_url: {get_param: [EndpointMap, IronicInternal, uri_no_suffix]}
+            ironic::conductor::enabled_drivers: {get_param: IronicEnabledDrivers}
             ironic::glance_api_servers: {get_param: [EndpointMap, GlanceInternal, uri]}
-            ironic::enabled_drivers: {get_param: IronicEnabledDrivers}
             # NOTE: bind IP is found in Heat replacing the network name with the
             # local node IP for the given network; replacement examples
             # (eg. for internal_api):
