Expose parameter to enable combination alarms
The puppet-tripleo change for the same is merged
I9220b7d020dc8ed45dd6ca83ea9647efd67ea648

Change-Id: Ic5309ada98c78a15aa3a47dd94acb9e68eb25295

--- a/puppet/services/aodh-api.yaml
+++ b/puppet/services/aodh-api.yaml
@@ -21,6 +21,11 @@ parameters:
   MonitoringSubscriptionAodhApi:
     default: 'overcloud-ceilometer-aodh-api'
     type: string
+  EnableCombinationAlarms:
+    default: false
+    description: Combination alarms are deprecated in Newton, hence disabled
+                 by default. To enable, set this parameter to true.
+    type: boolean
 
 resources:
   AodhBase:
@@ -62,5 +67,6 @@ outputs:
             # internal_api_subnet - > IP/CIDR
             aodh::api::host: {get_param: [ServiceNetMap, AodhApiNetwork]}
             aodh::wsgi::apache::bind_host: {get_param: [ServiceNetMap, AodhApiNetwork]}
+            tripleo::profile::base::aodh::api::enable_combination_alarms: {get_param: EnableCombinationAlarms}
       step_config: |
         include tripleo::profile::base::aodh::api
