Pass cinder_iscsi_address without brackets
We shoult never emit in hieradata:

  key: [ipv6]

as it will cause hiera parsing errors. This can only be addressed
in the puppet module.

Change-Id: I0b13b6691647769e41d9af8be4112e6341827e6c
Depends-On: I787becce343b38e6c27c9a1b937b47c0aefb034d
Closes-Bug: 1618930

--- a/puppet/services/cinder-volume.yaml
+++ b/puppet/services/cinder-volume.yaml
@@ -95,10 +95,6 @@ outputs:
             # internal_api -> IP
             # internal_api_uri -> [IP]
             # internal_api_subnet - > IP/CIDR
-            tripleo::profile::base::cinder::volume::iscsi::cinder_iscsi_address:
-              str_replace:
-                template: "NETWORK_uri"
-                params:
-                  NETWORK: {get_param: [ServiceNetMap, CinderIscsiNetwork]}
+            tripleo::profile::base::cinder::volume::iscsi::cinder_iscsi_address: {get_param: [ServiceNetMap, CinderIscsiNetwork]}
       step_config: |
         include ::tripleo::profile::base::cinder::volume
